updated server.js for connection launching and added user model for database logging

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
         <a href="/login">Login</a>
         {{/if}}
         {{#if loggedIn}}
-        <a href="/logout">Logout</a>
+        <button id="logout">Logout</button>
         {{/if}}
         <h1>
             The Tech Blog
