fixed server.js handlebars bug

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,12 +12,12 @@
     <nav>
         <a href="/">Home</a>
         <a href="/dashboard">Dashboard</a>
-        {{#if !loggedIn}}
+        {{!-- {{#if !loggedIn}} --}}
         <a href="/login">Login</a>
-        {{/if}}
-        {{#if loggedIn}}
+        {{!-- {{/if}} --}}
+        {{!-- {{#if loggedIn}} --}}
         <button id="logout">Logout</button>
-        {{/if}}
+        {{!-- {{/if}} --}}
         <h1>
             The Tech Blog
         </h1>
