introduced more routes for server various handlebars files

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,7 +7,7 @@
         <input
           type="email"
           class="form-control"
-          id="exampleInputEmail1"
+          id="InputEmail"
           aria-describedby="emailHelp"
         />
       </div>
@@ -16,7 +16,7 @@
         <input
           type="password"
           class="form-control"
-          id="exampleInputPassword1"
+          id="InputPassword"
         />
       </div>
       <button type="submit" class="btn btn-primary">Login</button>
@@ -31,7 +31,7 @@
         <input
           type="email"
           class="form-control"
-          id="exampleInputEmail1"
+          id="signUpEmail"
           aria-describedby="emailHelp"
         />
       </div>
@@ -40,7 +40,7 @@
         <input
           type="password"
           class="form-control"
-          id="exampleInputPassword1"
+          id="signUpPass"
         />
       </div>
       <button type="submit" class="btn btn-primary">Sign Up</button>
