--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,10 @@
 {{#each posts as |post|}}
-<div>
-    <p>{{post.title}}</p>
-    <p>{{post.comment}}</p>
+<div class="card">
+    <div class="card-header">
+        {{post.title}}
+    </div>
+    <div class="card-body">
+        <p class="card-text">{{post.comment}}</p>
+    </div>
 </div>
 {{/each}}
